eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 733518854468.dkr.ecr.eu-central-1.amazonaws.com/simplebank:fef840df6806a99dcabcc335c017cde45d472e05
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
